feat(docs): Documentação da API nas rotas de 'products' utilizando OpenAPI/Swagger
