# infra/webserver/handlers/product_handlers.go
@@ -33,19 +33,29 @@ func NewProductHandler(
 	}
 }
 
+// Create product godoc
+// @Summary Create a new product
+// @Description Create a new product
+// @Tags products
+// @Accept  json
+// @Produce  json
+// @Param product body dto.ProductCommand true "product request"
+// @Success 201 {object} dto.CreateProductOutput
+// @Failure 400	{object} ErrorResponse
+// @Failure 500	{object} ErrorResponse
+// @Router /products [post]
+// @Security ApiKeyAuth
 func (handler *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	var inputProduct dto.ProductCommand
 	err := json.NewDecoder(r.Body).Decode(&inputProduct)
 	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(err.Error())
+		returnJsonError(err, w, "", http.StatusBadRequest)
 		return
 	}
 
 	outputProduct, err := handler.CreateProductUC.Execute(inputProduct)
 	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		json.NewEncoder(w).Encode(err.Error())
+		returnJsonError(err, w, "", http.StatusInternalServerError)
 		return
 	}
 
@@ -54,11 +64,23 @@ func (handler *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Requ
 	json.NewEncoder(w).Encode(outputProduct)
 }
 
+// GetProduct godoc
+// @Summary Get a product
+// @Description Get a product
+// @Tags products
+// @Accept  json
+// @Produce  json
+// @Param id path string true "product id" Format(uuid)
+// @Success 200 {object} dto.GetProductOutput
+// @Failure 400	{object} ErrorResponse
+// @Failure 401
+// @Failure 404	{object} ErrorResponse
+// @Router /products/{id} [get]
+// @Security ApiKeyAuth
 func (handler *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == EMPTY_STRING {
-		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode("id is required")
+		returnJsonError(nil, w, "id is required", http.StatusBadRequest)
 		return
 	}
 
@@ -67,8 +89,7 @@ func (handler *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request
 	}
 	outputGetProduct, err := handler.GetProductUC.Execute(inputGetProduct)
 	if err != nil {
-		w.WriteHeader(http.StatusNotFound)
-		json.NewEncoder(w).Encode(err.Error())
+		returnJsonError(err, w, "", http.StatusNotFound)
 		return
 	}
 
@@ -77,6 +98,18 @@ func (handler *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request
 	json.NewEncoder(w).Encode(outputGetProduct)
 }
 
+// List products godoc
+// @Summary List products
+// @Description Get all products
+// @Tags products
+// @Accept  json
+// @Produce  json
+// @Param page query string false "page number"
+// @Param limit query string false "limit per page"
+// @Success 200 {array} dto.GetProductOutput
+// @Failure 500	{object} ErrorResponse
+// @Router /products [get]
+// @Security ApiKeyAuth
 func (handler *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	page := r.URL.Query().Get("page")
 	limit := r.URL.Query().Get("limit")
@@ -95,8 +128,7 @@ func (handler *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Reques
 
 	products, err := handler.GetProductUC.FindAll(pageInt, limitInt, sort)
 	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		json.NewEncoder(w).Encode(err.Error())
+		returnJsonError(err, w, "", http.StatusInternalServerError)
 		return
 	}
 
@@ -105,31 +137,42 @@ func (handler *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Reques
 	json.NewEncoder(w).Encode(products)
 }
 
+// Update product godoc
+// @Summary Update a product
+// @Description Update a product
+// @Tags products
+// @Accept  json
+// @Produce  json
+// @Param id path string true "product id" Format(uuid)
+// @Param product body dto.ProductCommand true "product request"
+// @Success 200 {string} string "Product updated successfully!"
+// @Failure 400	{object} ErrorResponse
+// @Failure 401
+// @Failure 404	{object} ErrorResponse
+// @Failure 500	{object} ErrorResponse
+// @Router /products/{id} [put]
+// @Security ApiKeyAuth
 func (handler *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == EMPTY_STRING {
-		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode("id is required")
+		returnJsonError(nil, w, "id is required", http.StatusBadRequest)
 		return
 	}
 
 	var command dto.ProductCommand
 	err := json.NewDecoder(r.Body).Decode(&command)
 	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(err.Error())
+		returnJsonError(err, w, "", http.StatusBadRequest)
 		return
 	}
 
 	err = handler.UpdateProductUC.Execute(id, command)
 	if err != nil && err.Error() == usecase.ErrNotFound.Error() {
-		w.WriteHeader(http.StatusNotFound)
-		json.NewEncoder(w).Encode(err.Error())
+		returnJsonError(err, w, "", http.StatusNotFound)
 		return
 	}
 	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		json.NewEncoder(w).Encode(err.Error())
+		returnJsonError(err, w, "", http.StatusInternalServerError)
 		return
 	}
 
@@ -137,23 +180,34 @@ func (handler *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Requ
 	json.NewEncoder(w).Encode("Product updated successfully!")
 }
 
+// Delete product godoc
+// @Summary Delete a product
+// @Description Delete a product
+// @Tags products
+// @Accept  json
+// @Produce  json
+// @Param id path string true "product id" Format(uuid)
+// @Success 200 {string} string "Product deleted successfully!"
+// @Failure 400	{object} ErrorResponse
+// @Failure 401
+// @Failure 404	{object} ErrorResponse
+// @Failure 500	{object} ErrorResponse
+// @Router /products/{id} [delete]
+// @Security ApiKeyAuth
 func (handler *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == EMPTY_STRING {
-		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode("id is required")
+		returnJsonError(nil, w, "id is required", http.StatusBadRequest)
 		return
 	}
 
 	err := handler.DeleteProductUC.Execute(id)
 	if err != nil && err.Error() == usecase.ErrNotFound.Error() {
-		w.WriteHeader(http.StatusNotFound)
-		json.NewEncoder(w).Encode(err.Error())
+		returnJsonError(err, w, "", http.StatusNotFound)
 		return
 	}
 	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		json.NewEncoder(w).Encode(err.Error())
+		returnJsonError(err, w, "", http.StatusInternalServerError)
 		return
 	}
 
